STYLE: Designed the 'back to top' button as well as sorting out some padding of content on tutors page. A tester mentioned how some content had appeared squashed on their phone - so now this was fixed by reducing padding-left and -right amounts.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,6 @@ html, body {
 
 #navbarNav li a:hover {
     font-weight: bold;
-    transition: 0.5s;
 }
 
 #navbarNav li button {
@@ -262,7 +261,7 @@ html, body {
 }
 
 .tutors {
-    padding: 20px 50px 0px;
+    padding: 20px 30px 0px;
 }
 
 .tutors i {
@@ -272,8 +271,8 @@ html, body {
 }
 
 .mini-profile {
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .profile {
@@ -383,7 +382,7 @@ html, body {
 
 .subjects-nav a {
     border: solid 2px #000;
-    border-radius: 20px;
+    border-radius: 30px;
     font-weight: 700;
     transition: 0.5s;
     -webkit-transition: 0.5s;
@@ -454,7 +453,7 @@ html, body {
     font-weight: 700;
 }
 
-/* ------------------------------------------------ JUMBOTRON & "TOP SUBJECTS" ANIMATION */
+/* ------------------------------------------------ JUMBOTRON (HOME) & "TOP SUBJECTS" (SUBJECTS) ANIMATION */
 
 .jumbotron button, 
 #top-subjects-now button {
@@ -559,6 +558,21 @@ html, body {
     font-family: 'Roboto', sans-serif;
 }
 
+.back-to-top {
+    border: solid 1px #000;
+    box-sizing: border-box;
+    width: 150px;
+    border-radius: 25px;
+    margin-bottom: 20px;
+    padding: 10px;
+    font-size: 15px;
+}
+
+.back-to-top a {
+    color: #000;
+    text-decoration: none;
+}
+
 /* ------------------------------------------------ FOOTER */
 
 footer {
@@ -569,6 +583,16 @@ footer {
 footer h5 {
     padding-top: 20px;
     text-transform: uppercase;
+}
+
+#footer-signup {
+    font-size: 25px;
+}
+
+.social-media {
+    box-sizing: border-box;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .social-media i {
